--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="This website reminds AtCoder's problems">
         <title>AtCoder Reminder</title>
         <link rel="stylesheet" href="../src/style/style.css">
-        <link rel="icon" href="/atcoderReminder/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
 
     <body>
