--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta name="author" content="kumastry">
         <meta name="description" content="This website reminds AtCoder's problems">
         <title>AtCoder Reminder</title>
