index.htmlをvite用に変更

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="author" content="kumastry">
         <meta name="description" content="This website reminds AtCoder's problems">
         <title>AtCoder Reminder</title>
-        <link rel="stylesheet" href="../src/style/style.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
 
     <body>
-        <div id="root"/>
+        <div id="root"></div>
+        <script type="module" src="/src/index.jsx"></script>
     </body>
 
 </html>
