--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <meta name="author" content="kumastry">
-        <meta name="description" content="This website reminds AtCoder's problems">
-        <title>AtCoder Reminder</title>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="author" content="kumastry" />
+    <meta
+      name="description"
+      content="This website reminds AtCoder's problems"
+    />
+    <title>AtCoder Reminder</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  </head>
 
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/index.jsx"></script>
-    </body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
+  </body>
 </html>
